--- a/css/main.css
+++ b/css/main.css
@@ -33,17 +33,32 @@ p, span, button, a {
   z-index: -1;
 }
 
+.video-background-overlay {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.7);
+}
+
 .promo {
   padding: 0 5rem;
 }
 
 .promo h1 {
-  font-size: 7rem;
+  font-size: 8rem;
   letter-spacing: -0.5rem;
+  line-height: 1;
+  color: white;
 }
 
 .promo p {
   font-size: 2.7rem;
   font-weight: 300;
+  color: rgba(255, 255, 255, 0.5);
 }
 /*# sourceMappingURL=main.css.map */
