--- a/css/main.scss
+++ b/css/main.scss
@@ -10,10 +10,27 @@ p, span, button, a {
     font-family: 'Lato', sans-serif;
 }
 .container {
-    display: grid; 
+    display: flex; 
     justify-content: start; 
-    align-content: center;
-    height: 100vh; 
+    align-items: center;
+}
+.main-button {
+    background-color: white; 
+    color: black; 
+    font-size: 1rem; 
+    text-align: center;
+    text-decoration: none; 
+    padding: 1em 2em; 
+    border-radius: 30px; 
+}
+.secondary-button {
+    color: rgba(255,255,255,0.7);
+    font-size: 1rem; 
+    text-decoration: none; 
+    padding: 1em 2em; 
+    margin-left: 1rem; 
+    border-radius: 30px; 
+    border: 1px solid rgba(255,255,255,0.7); 
 }
 .video-background {
     position: fixed;
@@ -32,9 +49,13 @@ p, span, button, a {
     width: 100vw;
     height: 100vh;
     z-index: -1;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.84);
 }
 .promo {
+    display: grid; 
+    justify-content: start; 
+    align-content: center;
+    height: 100vh; 
     padding: 0 5rem;
 
     h1 {
@@ -46,6 +67,12 @@ p, span, button, a {
     p {
         font-size: 2.7rem;
         font-weight: 300;
-        color: rgba(255,255,255,0.5);
+        color: rgba(255,255,255,0.7);
+        margin-bottom: 2rem;
+    }
+    .fa-angle-down {
+        font-size: 1rem;
+        margin-left: 0.5rem; 
+        color: black; 
     }
 }
