--- a/css/main.css
+++ b/css/main.css
@@ -40,17 +40,25 @@ p, span, button, a {
   font-size: 1rem;
   text-decoration: none;
   padding: 1em 2em;
-  margin-left: 1rem;
   border-radius: 30px;
   border: 1px solid rgba(255, 255, 255, 0.7);
 }
 
+.main-heading {
+  color: white;
+  font-size: 4rem;
+  letter-spacing: -0.35rem;
+  margin-bottom: 1rem;
+}
+
 .video-background {
-  position: fixed;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100vh;
   z-index: -1;
 }
 
@@ -92,6 +100,10 @@ p, span, button, a {
   margin-bottom: 2rem;
 }
 
+.promo .secondary-button {
+  margin-left: 1rem;
+}
+
 .promo .fas {
   font-size: 1rem;
   margin-left: 0.5rem;
@@ -103,5 +115,44 @@ p, span, button, a {
 
 .promo .fa-angle-right {
   color: rgba(255, 255, 255, 0.7);
+}
+
+.about-cta {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  height: 100vh;
+  background-color: #02132a;
+  padding: 0 5rem;
+}
+
+.about-cta p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 3rem;
+  line-height: 1.5;
+}
+
+.about-cta .fas {
+  font-size: 1rem;
+  margin-left: 0.5rem;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.about-cta img {
+  width: 85%;
+  height: auto;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.gallery {
+  height: 100vh;
+  background-color: #f9e7d0;
 }
 /*# sourceMappingURL=main.css.map */
