--- a/css/main.scss
+++ b/css/main.scss
@@ -28,16 +28,22 @@ p, span, button, a {
     font-size: 1rem; 
     text-decoration: none; 
     padding: 1em 2em; 
-    margin-left: 1rem; 
     border-radius: 30px; 
     border: 1px solid rgba(255,255,255,0.7); 
 }
+.main-heading {
+    color: white;
+    font-size: 4rem; 
+    letter-spacing: -0.35rem;
+    margin-bottom: 1rem; 
+}
 .video-background {
-    position: fixed;
+    object-fit: cover;
+    position: absolute;
     top: 0; 
     left: 0; 
-    min-width: 100%; 
-    min-height: 100%; 
+    width: 100%; 
+    height: 100vh;
     z-index: -1; 
 }
 .video-background-overlay{
@@ -70,6 +76,9 @@ p, span, button, a {
         color: rgba(255,255,255,0.7);
         margin-bottom: 2rem;
     }
+    .secondary-button {
+        margin-left: 1rem; 
+    }  
     .fas {
         font-size: 1rem;
         margin-left: 0.5rem; 
@@ -80,4 +89,37 @@ p, span, button, a {
     .fa-angle-right {
         color: rgba(255,255,255,0.7);
     }
+}
+
+.about-cta {
+    display: grid; 
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100vh;
+    background-color:  #02132a;
+    padding: 0 5rem; 
+
+    p {
+        font-size: 1.2rem;
+        font-weight: 300;
+        color: rgba(255,255,255,0.7);
+        margin-bottom: 3rem;   
+        line-height: 1.5;      
+    }
+    .fas {
+        font-size: 1rem;
+        margin-left: 0.5rem; 
+        color: rgba(255,255,255,0.7);
+    }
+    img {
+        width: 85%; 
+        height: auto;
+        border-top-left-radius: 30px; 
+        border-bottom-right-radius: 30px; 
+    }
+}
+
+.gallery {
+    height: 100vh; 
+    background-color: rgb(249,231,208);
 }
