Add navbar and about section styles

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,41 @@ p, span, button, a {
   margin-bottom: 1rem;
 }
 
+/* navbar */
+.navbar {
+  position: fixed;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  padding: 2rem 5rem;
+}
+
+.logo-container p {
+  color: white;
+}
+
+.navbar-container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  text-align: right;
+  list-style-type: none;
+}
+
+.navbar-container .nav-link {
+  color: white;
+  cursor: pointer;
+}
+
 .video-background {
   -o-object-fit: cover;
      object-fit: cover;
@@ -117,6 +152,11 @@ p, span, button, a {
   color: rgba(255, 255, 255, 0.7);
 }
 
+.about-curve {
+  border: 2px solid #02132a;
+  border-bottom-left-radius: 25%;
+}
+
 .about-cta {
   display: -ms-grid;
   display: grid;
@@ -128,6 +168,8 @@ p, span, button, a {
   height: 100vh;
   background-color: #02132a;
   padding: 0 5rem;
+  border-bottom-left-radius: 25%;
+  margin-bottom: 2rem;
 }
 
 .about-cta p {
@@ -153,6 +195,5 @@ p, span, button, a {
 
 .gallery {
   height: 100vh;
-  background-color: #f9e7d0;
 }
 /*# sourceMappingURL=main.css.map */
