--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,7 @@ p, span, button, a {
     font-size: 4rem; 
     line-height: 1; 
     margin-bottom: 1rem; 
+    letter-spacing: -0.03rem;
 }
 /* navbar */ 
 .navbar {
@@ -129,20 +130,30 @@ p, span, button, a {
     align-items: center;
     grid-template-columns: 2fr 1fr;
     height: 100vh;
-    background-image: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(251,249,243,1) 35%, rgba(249,231,208,0.7) 100%); 
-    padding: 0 5rem; 
+    background: linear-gradient(to top, rgba(17,17,17,0.98) 0%, rgba(17,17,17,1) 100%), url(https://images.pexels.com/photos/1204649/pexels-photo-1204649.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); 
+    padding: 0 5rem 0 0; 
 
-    p {
+    .main-heading {
+        color: #f1f1f1; 
+    }
+
+    .about-underline {
+        margin-bottom: 1rem;
+        width: 100%;
+        border: 1px solid rgba(255,255,255,0.07);
+    }
+
+    .about-para {
         font-size: 1.2rem;
         font-weight: 300;
-        color: #02132a;
+        color: rgba(255,255,255,0.5);
         margin-bottom: 3rem;   
         line-height: 2;      
     }
     .fas {
         font-size: 1rem;
         margin-left: 0.5rem; 
-        color: #02132a;
+        color: white;
     }
     img {
         width: 90%; 
