--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Nunito Sans', sans-serif;
 }
 
-p, span, button, a {
+p, span, button, a, small {
   font-family: 'Lato', sans-serif;
 }
 
@@ -165,5 +165,76 @@ p, span, button, a {
 /* gallery section */
 .gallery {
   height: 100vh;
+}
+
+/* footer */
+footer {
+  padding: 8rem 5rem;
+}
+
+.footer-container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-container .footer-about, .footer-container .footer-pages, .footer-container .footer-contact {
+  margin: 0 auto;
+}
+
+.footer-container .footer-title {
+  margin-bottom: 1rem;
+  font-size: 1.22rem;
+}
+
+.footer-container .footer-about-subtitle {
+  margin-bottom: 1.4rem;
+  line-height: 2;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.footer-container .footer-social-media-icon {
+  margin-right: 1rem;
+  font-size: 1.2rem;
+}
+
+.footer-container .footer-pages-list {
+  list-style-type: none;
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.7);
+  line-height: 2;
+  -webkit-columns: 2;
+          columns: 2;
+}
+
+.footer-container .footer-contact-info {
+  margin-bottom: 1rem;
+}
+
+.footer-container .footer-contact-info span {
+  font-weight: 300;
+  margin-left: 0.5rem;
+}
+
+.footer-underline {
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  margin: 4rem 0;
+}
+
+.copyright-container {
+  text-align: center;
+}
+
+.copyright-container .copyright-text {
+  font-size: 1rem;
+  text-align: center;
+  font-weight: 300;
 }
 /*# sourceMappingURL=main.css.map */
