add about section html and styles

--- a/css/main.css
+++ b/css/main.css
@@ -53,15 +53,24 @@ p, span, button, a, small {
   border: 1px solid #02132a;
 }
 
+.secondary-button-two i {
+  margin-left: 0.5rem;
+}
+
 .main-heading {
   color: #02132a;
-  font-size: 5.5rem;
-  line-height: 1;
-  margin-bottom: 1.4rem;
-  letter-spacing: -0.25rem;
+  font-size: 5rem;
+  margin-bottom: 1rem;
+  letter-spacing: -0.3rem;
+  font-weight: 400;
 }
 
 /* navbar */
+.navbar-section {
+  position: relative;
+  z-index: 5;
+}
+
 .navbar {
   position: fixed;
   width: 100%;
@@ -119,6 +128,12 @@ p, span, button, a, small {
   background: rgba(0, 0, 0, 0.84);
 }
 
+/* header */
+.header-section {
+  position: relative;
+  z-index: 1;
+}
+
 .promo {
   display: -ms-grid;
   display: grid;
@@ -160,6 +175,66 @@ p, span, button, a, small {
 
 .promo .fa-angle-right {
   color: rgba(255, 255, 255, 0.7);
+}
+
+/* about section */
+.about-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+}
+
+.about-section .about-background-one {
+  width: 54%;
+  height: 100%;
+  background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -2;
+}
+
+.about-section .about-content {
+  width: 46%;
+  height: 105%;
+  background-color: white;
+  -webkit-transform: rotate(6deg) translateX(-50px) translateY(30px);
+          transform: rotate(6deg) translateX(-50px) translateY(30px);
+  z-index: -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-section .about-content .about-content-inner {
+  padding: 0rem 5rem 0 9rem;
+  -webkit-transform: rotate(-6deg);
+          transform: rotate(-6deg);
+}
+
+.about-section .about-content .about-content-subtitle {
+  line-height: 2;
+  margin-bottom: 3rem;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+
+.about-section .about-background-two {
+  background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+  width: 4%;
+  height: 100%;
 }
 
 /* gallery section */
