--- a/css/main.scss
+++ b/css/main.scss
@@ -38,15 +38,23 @@ p, span, button, a, small {
     padding: 1em 2em; 
     border-radius: 30px; 
     border: 1px solid #02132a; 
+
+    i {
+        margin-left: 0.5rem; 
+    }
 }
 .main-heading {
     color: #02132a;
-    font-size: 5.5rem; 
-    line-height: 1; 
-    margin-bottom: 1.4rem; 
-    letter-spacing: -0.25rem;
+    font-size: 5rem;
+    margin-bottom: 1rem;
+    letter-spacing: -0.3rem;
+    font-weight: 400;
 }
 /* navbar */ 
+.navbar-section {
+    position: relative; 
+    z-index: 5; 
+}
 .navbar {
     position: fixed;
     width: 100%;
@@ -92,6 +100,11 @@ p, span, button, a, small {
     z-index: -1;
     background: rgba(0, 0, 0, 0.84);
 }
+/* header */ 
+.header-section {
+    position: relative; 
+    z-index: 1; 
+}
 .promo {
     display: grid; 
     justify-content: start; 
@@ -126,6 +139,53 @@ p, span, button, a, small {
     }
 }
 
+/* about section */ 
+.about-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+    .about-background-one {
+        width: 54%;
+        height: 100%;
+        background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        z-index: -2;
+    }
+
+    .about-content {
+        width: 46%;
+        height: 105%;
+        background-color: white;
+        transform: rotate(6deg) translateX(-50px) translateY(30px);
+        z-index: -1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .about-content-inner {
+            padding: 0rem 5rem 0 9rem;
+            transform: rotate(-6deg);
+        }
+
+        .about-content-subtitle {
+            line-height: 2;
+            margin-bottom: 3rem;
+            font-weight: 300;
+            font-size: 1.2rem;
+        }
+    }
+
+
+
+    .about-background-two {
+        background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+        width: 4%;
+        height: 100%;
+    }
+}
 /* gallery section */ 
 .gallery {
     height: 100vh; 
