--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,26 @@ p, span, button, a, small {
   font-weight: 400;
 }
 
+.main-heading-small {
+  color: #02132a;
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
+  letter-spacing: -0.3rem;
+  font-weight: 400;
+}
+
+.main-subheading {
+  line-height: 2;
+  margin-bottom: 3rem;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+
+.highlight-background {
+  background-color: rgba(100, 188, 205, 0.1);
+  padding: 0 1rem;
+}
+
 /* navbar */
 .navbar-section {
   position: relative;
@@ -131,7 +151,7 @@ p, span, button, a, small {
 /* header */
 .header-section {
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 .promo {
@@ -201,12 +221,6 @@ p, span, button, a, small {
 }
 
 .about-section .about-content {
-  width: 46%;
-  height: 105%;
-  background-color: white;
-  -webkit-transform: rotate(6deg) translateX(-50px) translateY(30px);
-          transform: rotate(6deg) translateX(-50px) translateY(30px);
-  z-index: -1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,12 +230,53 @@ p, span, button, a, small {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 46%;
+  height: 105%;
+  background-color: white;
+  -webkit-transform: rotate(6deg) translateX(-50px) translateY(30px);
+          transform: rotate(6deg) translateX(-50px) translateY(30px);
+  position: relative;
+  z-index: 1;
 }
 
 .about-section .about-content .about-content-inner {
+  position: relative;
   padding: 0rem 5rem 0 9rem;
   -webkit-transform: rotate(-6deg);
           transform: rotate(-6deg);
+}
+
+.about-section .about-content .about-content-inner .about-square-one, .about-section .about-content .about-content-inner .about-square-two, .about-section .about-content .about-content-inner .about-square-three {
+  position: absolute;
+  background-color: rgba(100, 188, 205, 0.1);
+  z-index: -1 !important;
+}
+
+.about-section .about-content .about-content-inner .about-square-one {
+  top: -40%;
+  right: 65%;
+  width: 100px;
+  height: 100px;
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+}
+
+.about-section .about-content .about-content-inner .about-square-two {
+  top: 95%;
+  right: 5%;
+  width: 130px;
+  height: 130px;
+  -webkit-transform: rotate(8deg);
+          transform: rotate(8deg);
+}
+
+.about-section .about-content .about-content-inner .about-square-three {
+  top: 100%;
+  right: 86%;
+  width: 70px;
+  height: 70px;
+  -webkit-transform: rotate(-22deg);
+          transform: rotate(-22deg);
 }
 
 .about-section .about-content .about-content-subtitle {
@@ -235,6 +290,103 @@ p, span, button, a, small {
   background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
   width: 4%;
   height: 100%;
+}
+
+/* shows */
+.shows-content {
+  background-color: white;
+  padding: 5rem 4rem;
+  z-index: 2;
+  height: 100%;
+}
+
+.shows-image {
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 2;
+}
+
+.shows-container-one {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 8rem 5rem 5rem 5rem;
+  text-align: center;
+}
+
+.shows-container-two {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  padding: 0 5rem;
+  position: relative;
+  height: 60vh;
+}
+
+.shows-container-two .shows-content {
+  -webkit-transform: rotate(-6deg) translateX(25px);
+          transform: rotate(-6deg) translateX(25px);
+}
+
+.shows-container-two .shows-content-inner {
+  -webkit-transform: rotate(6deg);
+          transform: rotate(6deg);
+}
+
+.shows-container-two .show-video-content {
+  position: relative;
+}
+
+.shows-container-two .walk-around-video {
+  width: 100%;
+  height: 100%;
+}
+
+.shows-container-two .show-video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.shows-container-three {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  padding: 0 5rem;
+  height: 70vh;
+}
+
+.shows-container-three .shows-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: rotate(6deg) translateX(-25px);
+          transform: rotate(6deg) translateX(-25px);
+}
+
+.shows-container-three .shows-content-inner {
+  -webkit-transform: rotate(-6deg);
+          transform: rotate(-6deg);
 }
 
 /* gallery section */
