--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+$highlight-background: rgba(100, 188, 205, 0.1); 
+
 * {
     box-sizing: border-box;
     margin: 0; 
@@ -49,6 +51,23 @@ p, span, button, a, small {
     margin-bottom: 1rem;
     letter-spacing: -0.3rem;
     font-weight: 400;
+}
+.main-heading-small {
+    color: #02132a;
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
+    letter-spacing: -0.3rem;
+    font-weight: 400;    
+}
+.main-subheading {
+    line-height: 2;
+    margin-bottom: 3rem;
+    font-weight: 300;
+    font-size: 1.2rem;
+}
+.highlight-background {
+    background-color: $highlight-background; 
+    padding: 0 1rem;
 }
 /* navbar */ 
 .navbar-section {
@@ -103,7 +122,7 @@ p, span, button, a, small {
 /* header */ 
 .header-section {
     position: relative; 
-    z-index: 1; 
+    z-index: 2; 
 }
 .promo {
     display: grid; 
@@ -156,18 +175,50 @@ p, span, button, a, small {
     }
 
     .about-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 46%;
         height: 105%;
         background-color: white;
         transform: rotate(6deg) translateX(-50px) translateY(30px);
-        z-index: -1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: relative;
+        z-index: 1;
 
         .about-content-inner {
+            position: relative;
             padding: 0rem 5rem 0 9rem;
             transform: rotate(-6deg);
+
+            .about-square-one, .about-square-two, .about-square-three {
+                position: absolute;
+                background-color: $highlight-background;
+                z-index: -1 !important;
+            }
+
+            .about-square-one {
+                top: -40%;
+                right: 65%;
+                width: 100px;
+                height: 100px; 
+                transform: rotate(-15deg);
+            }
+            .about-square-two { 
+                top: 95%;
+                right: 5%;
+                width: 130px;
+                height: 130px;
+                transform: rotate(8deg);
+            }
+
+            .about-square-three { 
+                top: 100%;
+                right: 86%;
+                width: 70px;
+                height: 70px;
+                transform: rotate(-22deg);
+            }
+
         }
 
         .about-content-subtitle {
@@ -178,12 +229,84 @@ p, span, button, a, small {
         }
     }
 
-
-
     .about-background-two {
         background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
         width: 4%;
         height: 100%;
+    }
+}
+/* shows */ 
+.shows-content {
+    background-color: white; 
+    padding: 5rem 4rem;
+    z-index: 2;
+    height: 100%;
+}
+
+.shows-image {
+    width: 100%; 
+    height: auto; 
+    position: relative;
+    z-index: 2; 
+}
+.shows-container-one {
+    display: grid; 
+    align-items: center; 
+    justify-content: center; 
+    padding: 8rem 5rem 5rem 5rem;
+    text-align: center; 
+}
+
+.shows-container-two {
+    display: grid; 
+    align-items: center; 
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 5rem; 
+    position: relative;
+    height: 60vh;
+
+    .shows-content {
+        transform: rotate(-6deg) translateX(25px);
+    }
+
+    .shows-content-inner {
+        transform: rotate(6deg);
+    }
+
+    .show-video-content {
+        position: relative; 
+    }
+
+    .walk-around-video {
+        width: 100%; 
+        height: 100%; 
+    }
+
+    .show-video-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+    }
+
+}
+.shows-container-three {
+    display: grid; 
+    align-items: center; 
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 5rem; 
+    height: 70vh;
+
+    .shows-content {
+        display: flex;
+        align-items: center;  
+        transform: rotate(6deg) translateX(-25px);
+    }
+
+    .shows-content-inner {
+        transform: rotate(-6deg);
     }
 }
 /* gallery section */ 
