--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,7 @@ p, span, button, a, small {
 .shows-content {
   background-color: white;
   padding: 5rem 4rem;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
 }
 
@@ -357,7 +357,7 @@ p, span, button, a, small {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 99%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -382,11 +382,34 @@ p, span, button, a, small {
           align-items: center;
   -webkit-transform: rotate(6deg) translateX(-25px);
           transform: rotate(6deg) translateX(-25px);
+  padding: 5rem 5rem;
 }
 
 .shows-container-three .shows-content-inner {
   -webkit-transform: rotate(-6deg);
           transform: rotate(-6deg);
+}
+
+.shows-container-four {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  padding: 0 5rem;
+  height: 70vh;
+}
+
+.shows-container-four .shows-content {
+  -webkit-transform: rotate(-6deg) translateX(25px);
+          transform: rotate(-6deg) translateX(25px);
+}
+
+.shows-container-four .shows-content-inner {
+  -webkit-transform: rotate(6deg);
+          transform: rotate(6deg);
 }
 
 /* gallery section */
