--- a/css/main.scss
+++ b/css/main.scss
@@ -239,7 +239,7 @@ p, span, button, a, small {
 .shows-content {
     background-color: white; 
     padding: 5rem 4rem;
-    z-index: 2;
+    z-index: 3;
     height: 100%;
 }
 
@@ -287,7 +287,7 @@ p, span, button, a, small {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 99%;
         background-color: rgba(0,0,0,0.5);
     }
 
@@ -303,10 +303,26 @@ p, span, button, a, small {
         display: flex;
         align-items: center;  
         transform: rotate(6deg) translateX(-25px);
+        padding: 5rem 5rem; 
     }
 
     .shows-content-inner {
         transform: rotate(-6deg);
+    }
+}
+.shows-container-four {
+    display: grid; 
+    align-items: center; 
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 5rem; 
+    height: 70vh;    
+
+    .shows-content {
+        transform: rotate(-6deg) translateX(25px);
+    }
+
+    .shows-content-inner {
+        transform: rotate(6deg);
     }
 }
 /* gallery section */ 
