--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+body {
+  background-color: #fcf3e7;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Nunito Sans', sans-serif;
 }
@@ -232,7 +236,7 @@ p, span, button, a, small {
           align-items: center;
   width: 46%;
   height: 105%;
-  background-color: white;
+  background-color: #fcf3e7;
   -webkit-transform: rotate(6deg) translateX(-50px) translateY(30px);
           transform: rotate(6deg) translateX(-50px) translateY(30px);
   position: relative;
@@ -293,8 +297,12 @@ p, span, button, a, small {
 }
 
 /* shows */
+.shows-section {
+  padding-bottom: 6rem;
+}
+
 .shows-content {
-  background-color: white;
+  background-color: #fcf3e7;
   padding: 5rem 4rem;
   z-index: 3;
   height: 100%;
@@ -413,6 +421,31 @@ p, span, button, a, small {
 }
 
 /* featured work */
+.featured-work-section {
+  background-color: rgba(186, 206, 230, 0.4);
+  position: relative;
+  z-index: 5;
+  -webkit-transform: skewY(5deg);
+          transform: skewY(5deg);
+}
+
+.featured-work-title {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 50%;
+      grid-template-columns: 50%;
+  text-align: center;
+  padding: 8rem 5rem 5rem 5rem;
+  -webkit-transform: skewY(-5deg);
+          transform: skewY(-5deg);
+}
+
 .featured-work {
   display: -ms-grid;
   display: grid;
@@ -422,12 +455,28 @@ p, span, button, a, small {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 0 5rem;
+  grid-gap: 1.5rem;
+  -webkit-transform: skewY(-5deg);
+          transform: skewY(-5deg);
+}
+
+.featured-work iframe {
+  width: 100%;
+}
+
+.featured-work-button {
+  padding: 5rem 5rem 10rem 5rem;
   text-align: center;
+  -webkit-transform: skewY(-5deg);
+          transform: skewY(-5deg);
 }
 
 /* footer */
 footer {
-  padding: 8rem 5rem;
+  padding: 12rem 5rem;
 }
 
 .footer-container {
