--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,13 @@
 $highlight-background: rgba(100, 188, 205, 0.1); 
+$lighbeige-background: rgb(252,243,231); 
 
 * {
     box-sizing: border-box;
     margin: 0; 
     padding: 0; 
+}
+body {
+    background-color: $lighbeige-background; 
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Nunito Sans', sans-serif;
@@ -180,7 +184,7 @@ p, span, button, a, small {
         align-items: center;
         width: 46%;
         height: 105%;
-        background-color: white;
+        background-color: $lighbeige-background;
         transform: rotate(6deg) translateX(-50px) translateY(30px);
         position: relative;
         z-index: 1;
@@ -236,8 +240,12 @@ p, span, button, a, small {
     }
 }
 /* shows */ 
+.shows-section {
+    padding-bottom: 6rem; 
+}
+
 .shows-content {
-    background-color: white; 
+    background-color: $lighbeige-background; 
     padding: 5rem 4rem;
     z-index: 3;
     height: 100%;
@@ -326,16 +334,42 @@ p, span, button, a, small {
     }
 }
 /* featured work */ 
-.featured-work {
+.featured-work-section {
+    background-color: rgba(186,206,230,0.4);
+    position: relative;
+    z-index: 5; 
+    transform: skewY(5deg);
+}
+.featured-work-title {
     display: grid; 
     justify-content: center; 
     align-items: center; 
+    grid-template-columns: 50%; 
     text-align: center; 
+    padding: 8rem 5rem 5rem 5rem; 
+    transform: skewY(-5deg);
 }
+.featured-work {
+    display: grid; 
+    justify-content: center;
+    align-items: center; 
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 5rem; 
+    grid-gap: 1.5rem; 
+    transform: skewY(-5deg);
 
+    iframe {
+        width: 100%; 
+    }
+}
+.featured-work-button {
+    padding: 5rem 5rem 10rem 5rem; 
+    text-align:center; 
+    transform: skewY(-5deg);
+}
 /* footer */ 
 footer {
-    padding: 8rem 5rem; 
+    padding: 12rem 5rem; 
 }
 
 .footer-container {
