increase z-index and add transition to navbar

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ p, span, button, a, small {
 /* navbar */
 .navbar-section {
   position: relative;
-  z-index: 5;
+  z-index: 10;
 }
 
 .navbar {
@@ -106,6 +106,8 @@ p, span, button, a, small {
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   padding: 2rem 5rem;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .logo-container p {
