add contact page styles and html

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ p, span, button, a, small {
   border-radius: 30px;
 }
 
+.main-button .fas {
+  margin-left: 0.5rem;
+}
+
 .secondary-button {
   color: rgba(255, 255, 255, 0.7);
   font-size: 1rem;
@@ -46,6 +50,10 @@ p, span, button, a, small {
   padding: 1em 2em;
   border-radius: 30px;
   border: 1px solid rgba(255, 255, 255, 0.7);
+}
+
+.secondary-button .fas {
+  margin-left: 0.5rem;
 }
 
 .secondary-button-two {
@@ -57,8 +65,15 @@ p, span, button, a, small {
   border: 1px solid #02132a;
 }
 
-.secondary-button-two i {
+.secondary-button-two .fas {
   margin-left: 0.5rem;
+}
+
+.page-heading {
+  color: white;
+  font-size: 6rem;
+  margin-bottom: 0rem;
+  letter-spacing: -0.3rem;
 }
 
 .main-heading {
@@ -77,11 +92,15 @@ p, span, button, a, small {
   font-weight: 400;
 }
 
-.main-subheading {
+.main-subheading, .main-subheading-light {
   line-height: 2;
   margin-bottom: 3rem;
   font-weight: 300;
   font-size: 1.2rem;
+}
+
+.main-subheading-light {
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .highlight-background {
@@ -128,6 +147,7 @@ p, span, button, a, small {
 
 .navbar-container .nav-link {
   color: white;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -192,7 +212,6 @@ p, span, button, a, small {
 
 .promo .fas {
   font-size: 1rem;
-  margin-left: 0.5rem;
 }
 
 .promo .fa-angle-down {
@@ -474,6 +493,51 @@ p, span, button, a, small {
   text-align: center;
   -webkit-transform: skewY(-5deg);
           transform: skewY(-5deg);
+}
+
+/* contact page */
+.contact-header {
+  position: relative;
+  background-image: url(https://scontent.fykz1-2.fna.fbcdn.net/v/t31.0-8/10504992_692628334138473_4946517905191679953_o.jpg?_nc_cat=104&_nc_ohc=o2x4rqwbSVAAX_FTbm5&_nc_ht=scontent.fykz1-2.fna&oh=b4cbc15892bf20db36e6e0a109b5c5aa&oe=5EBB1558);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 70vh;
+}
+
+.contact-header::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.contact-container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 5rem;
+}
+
+.contact-container .page-heading, .contact-container .main-subheading-light, .contact-container .main-button {
+  position: relative;
+  z-index: 2;
+}
+
+.contact-form {
+  padding: 8rem 5rem;
+}
+
+.contact-form .full-name, .contact-form .email-address, .contact-form .phone-number, .contact-form .subject, .contact-form .message {
+  display: block;
+  margin-bottom: 1rem;
 }
 
 /* footer */
