--- a/css/main.scss
+++ b/css/main.scss
@@ -139,7 +139,7 @@ p, span, button, a, small {
     display: block;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: -1;
     background: rgba(0, 0, 0, 0.75);
