--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,9 @@ body {
   background-color: #fcf3e7;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, label {
   font-family: 'Nunito Sans', sans-serif;
+  font-weight: 600;
 }
 
 p, span, button, a, small {
@@ -105,6 +106,10 @@ p, span, button, a, small {
   padding: 0 1rem;
 }
 
+.form-label {
+  color: #02132a;
+}
+
 /* navbar */
 .navbar-section {
   position: relative;
@@ -168,7 +173,7 @@ p, span, button, a, small {
   display: block;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -1;
   background: rgba(0, 0, 0, 0.75);
@@ -541,12 +546,90 @@ p, span, button, a, small {
 }
 
 .contact-form {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   padding: 8rem 5rem;
 }
 
-.contact-form .full-name, .contact-form .email-address, .contact-form .phone-number, .contact-form .subject, .contact-form .message {
+.contact-form .contact-info {
+  background-color: #fcf3e7;
+  padding: 1rem 5rem 0 0;
+  position: relative;
+  z-index: 2;
+  -webkit-transform: rotate(3deg) translateX(10px);
+          transform: rotate(3deg) translateX(10px);
+}
+
+.contact-form .contact-info form {
+  -webkit-transform: rotate(-3deg);
+          transform: rotate(-3deg);
+}
+
+.contact-form .contact-image {
+  background: url("https://images.pexels.com/photos/719609/pexels-photo-719609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  height: 90%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  background-size: cover;
+}
+
+.contact-form .form-contain-one, .contact-form .form-contain-two {
+  width: 100%;
+}
+
+.contact-form .form-contain-two {
+  margin-left: 1rem;
+}
+
+.contact-form .form-label {
+  margin-bottom: 1.5rem;
+}
+
+.contact-form .first-name, .contact-form .last-name, .contact-form .email-address, .contact-form .phone-number, .contact-form .subject, .contact-form .message {
+  width: 100%;
   display: block;
-  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  background-color: transparent;
+  padding: 0.8rem 2.5rem;
+  border: 1px solid rgba(2, 19, 42, 0.2);
+}
+
+/* contact map */
+.contact-map {
+  padding: 0 5rem 6rem 5rem;
+  height: 80vh;
+}
+
+.contact-map .contact-map-contain {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.contact-map .map {
+  border: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.contact-map .map-overlay {
+  background-color: #fcf3e7;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
 }
 
 /* footer */
