--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 $highlight-background: rgba(100, 188, 205, 0.1); 
 $lightbeige-background: rgb(252,243,231); 
+$darkblue-color: rgb(2,19,42); 
 
 @mixin grid-layout {
     display: grid; 
@@ -15,8 +16,9 @@ $lightbeige-background: rgb(252,243,231);
 body {
     background-color: $lightbeige-background; 
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, label { 
     font-family: 'Nunito Sans', sans-serif;
+    font-weight: 600;
 }
 p, span, button, a, small {
     font-family: 'Lato', sans-serif;
@@ -50,11 +52,11 @@ p, span, button, a, small {
     }
 }
 .secondary-button-two {
-    color: #02132a;
+    color: $darkblue-color;
     font-size: 1rem; 
     text-decoration: none; 
     padding: 1em 2em; 
-    border: 1px solid #02132a; 
+    border: 1px solid $darkblue-color; 
 
     .fas {
         margin-left: 0.5rem; 
@@ -67,14 +69,14 @@ p, span, button, a, small {
     letter-spacing: -0.3rem;
 }
 .main-heading {
-    color: #02132a;
+    color: $darkblue-color;
     font-size: 5rem;
     margin-bottom: 1rem;
     letter-spacing: -0.3rem;
     font-weight: 400;
 }
 .main-heading-small {
-    color: #02132a;
+    color: $darkblue-color;
     font-size: 3.5rem;
     margin-bottom: 1rem;
     letter-spacing: -0.3rem;
@@ -92,6 +94,9 @@ p, span, button, a, small {
 .highlight-background {
     background-color: $highlight-background; 
     padding: 0 1rem;
+}
+.form-label {
+    color: $darkblue-color;
 }
 /* navbar */ 
 .navbar-section {
@@ -412,11 +417,79 @@ p, span, button, a, small {
 
 }
 .contact-form {
+    display: grid; 
+    justify-content: center; 
+    align-items: center; 
+    grid-template-columns: repeat(2, 1fr);
     padding: 8rem 5rem; 
 
-    .full-name, .email-address, .phone-number, .subject, .message {
+    .contact-info {
+        background-color: #fcf3e7;
+        padding: 1rem 5rem 0 0;
+        position: relative;
+        z-index: 2;
+        transform: rotate(3deg) translateX(10px);
+
+        form {
+            transform: rotate(-3deg);
+        }
+    }
+
+    .contact-image {
+        background: url('https://images.pexels.com/photos/719609/pexels-photo-719609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+        height: 90%;
+        width: 100%;
+        position: relative;
+        z-index: 1;
+        background-size: cover;
+    }
+
+    .form-contain-one, .form-contain-two {
+        width: 100%; 
+    }
+
+    .form-contain-two {
+        margin-left: 1rem;
+    }
+
+    .form-label {
+        margin-bottom: 1.5rem; 
+    }
+    .first-name, .last-name, .email-address, .phone-number, .subject, .message {
+        width: 100%;
         display: block; 
-        margin-bottom: 1rem; 
+        margin-top: 0.5rem; 
+        margin-bottom: 1.5rem; 
+        background-color: transparent; 
+        padding: 0.8rem 2.5rem; 
+        border: 1px solid rgba(2,19,42,0.2); 
+    }
+}
+/* contact map */ 
+.contact-map {
+    padding: 0 5rem 6rem 5rem;
+    height: 80vh; 
+
+    .contact-map-contain {
+        position: relative;
+        height:100%;
+        width:100%;
+        margin: 0 auto;
+    }
+
+    .map {
+        border:0;
+        width:100%;
+        height:100%;
+    }
+
+    .map-overlay {
+        background-color:#fcf3e7;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:10%;
     }
 }
 /* footer */ 
