--- a/css/main.css
+++ b/css/main.css
@@ -606,6 +606,7 @@ p, span, button, a, small {
 
 /* contact map */
 .contact-map {
+  background-color: #fcf3e7;
   padding: 0 5rem 6rem 5rem;
   height: 80vh;
 }
@@ -615,6 +616,10 @@ p, span, button, a, small {
   height: 100%;
   width: 100%;
   margin: 0 auto;
+}
+
+.contact-map .main-heading {
+  margin-bottom: 0;
 }
 
 .contact-map .map {
@@ -634,7 +639,7 @@ p, span, button, a, small {
 
 /* footer */
 footer {
-  padding: 12rem 5rem;
+  padding: 12rem 5rem 5rem 5rem;
 }
 
 .footer-container {
