--- a/css/main.scss
+++ b/css/main.scss
@@ -467,6 +467,7 @@ p, span, button, a, small {
 }
 /* contact map */ 
 .contact-map {
+    background-color: #fcf3e7; 
     padding: 0 5rem 6rem 5rem;
     height: 80vh; 
 
@@ -475,6 +476,10 @@ p, span, button, a, small {
         height:100%;
         width:100%;
         margin: 0 auto;
+    }
+
+    .main-heading {
+        margin-bottom: 0;
     }
 
     .map {
@@ -494,7 +499,7 @@ p, span, button, a, small {
 }
 /* footer */ 
 footer {
-    padding: 12rem 5rem; 
+    padding: 12rem 5rem 5rem 5rem; 
 }
 
 .footer-container {
