--- a/css/main.scss
+++ b/css/main.scss
@@ -35,32 +35,94 @@ p, span, button, a, small {
     text-align: center;
     text-decoration: none; 
     padding: 1em 2em; 
+    position: relative; 
+    z-index: 1; 
 
     .fas {
         margin-left: 0.5rem; 
     }
 }
+
 .secondary-button {
+    background-color: transparent; 
     color: rgba(255,255,255,0.7);
     font-size: 1rem; 
     text-decoration: none; 
     padding: 1em 2em; 
     border: 1px solid rgba(255,255,255,0.7); 
+    transition: .2s ease;
+    position: relative;
+    z-index: 1; 
 
     .fas {
         margin-left: 0.5rem; 
+        z-index: 1; 
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        color: $darkblue-color !important;
+        transition: .25s ease-in;
+        z-index: -1;
+        transform: scaleX(0);
+        opacity: 0;
+        transform-origin: left;
+    }
+
+    &:hover:after {
+        color: $darkblue-color !important;
+        transform: scaleX(1);
+        opacity: 1;        
+    }
+
+    &:hover {
+        color: $darkblue-color !important;
     }
 }
+
 .secondary-button-two {
     color: $darkblue-color;
+    border: 1px solid $darkblue-color; 
     font-size: 1rem; 
     text-decoration: none; 
     padding: 1em 2em; 
-    border: 1px solid $darkblue-color; 
+    position: relative; 
+    z-index: 1; 
 
     .fas {
         margin-left: 0.5rem; 
     }
+
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $darkblue-color;
+        color: $darkblue-color !important;
+        transition: .25s ease-in;
+        z-index: -1;
+        transform: scaleX(0);
+        opacity: 0;
+        transform-origin: left;
+    }
+
+    &:hover:after {
+        transform: scaleX(1);
+        opacity: 1;        
+    }
+
+    &:hover {
+        color: white !important;
+    }    
 }
 .page-heading {
     color: white; 
@@ -181,9 +243,6 @@ p, span, button, a, small {
     }
     .fa-angle-down {
         color: black; 
-    }
-    .fa-angle-right {
-        color: rgba(255,255,255,0.7);
     }
 }
 
@@ -371,7 +430,7 @@ p, span, button, a, small {
     @include grid-layout; 
     grid-template-columns: repeat(3, 1fr);
     padding: 0 5rem; 
-    grid-gap: 2rem; 
+    grid-gap: 1.5rem; 
     transform: skewY(-5deg);
 
     iframe {
