--- a/css/main.scss
+++ b/css/main.scss
@@ -160,6 +160,10 @@ p, span, button, a, small {
 .form-label {
     color: $darkblue-color;
 }
+.img-fluid {
+    width: 100%; 
+    height: auto; 
+}
 /* navbar */ 
 .navbar-section {
     position: relative; 
@@ -554,6 +558,66 @@ p, span, button, a, small {
         left:0;
         width:100%;
         height:10%;
+    }
+}
+/* about page */ 
+.about-header {
+    position: relative;
+    background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+    background-size: cover; 
+    background-repeat: no-repeat;
+    width: 100%; 
+    height: 70vh;
+}
+.about-header::after {
+    content:''; 
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0,0,0,0.75);
+}
+.about-container {
+    height: 100%; 
+    display: flex; 
+    align-items: center; 
+    padding: 0 5rem; 
+
+    .page-heading, .main-subheading-light, .main-button {
+        position: relative;
+        z-index: 2;         
+    }  
+}
+.gallery-container {
+    padding: 8rem 0.1rem; 
+
+    .gallery-header {
+        text-align: center; 
+        padding-bottom: 5rem; 
+    }
+
+    .gallery {
+        display: flex; 
+        flex-wrap: wrap; 
+
+        .gallery-column {
+            flex: 25%; 
+            margin: 0.1rem;
+        }
+    }
+}
+/* responsive styles for gallery */ 
+@media screen and (max-width: 800px) {
+    .gallery-column {
+        flex: 40% !important; 
+        max-width: 100%; 
+    }
+}
+@media screen and (max-width: 600px) {
+    .gallery-column {
+        flex: 100% !important; 
+        max-width: 100%; 
     }
 }
 /* footer */ 
