--- a/css/main.scss
+++ b/css/main.scss
@@ -164,6 +164,27 @@ p, span, button, a, small {
     width: 100%; 
     height: auto; 
 }
+.position-relative {
+    position: relative;
+}
+.skew-right {
+    background-color: $lightbeige-background; 
+    position: absolute; 
+    top: -10%; 
+    left: -10%; 
+    width: 15%; 
+    height: 120%; 
+    transform: rotate(6deg)
+}
+.skew-left {
+    background-color: $lightbeige-background; 
+    position: absolute; 
+    top: -10%; 
+    left: 90%; 
+    width: 15%; 
+    height: 120%; 
+    transform: rotate(-6deg);   
+}
 /* navbar */ 
 .navbar-section {
     position: relative; 
@@ -589,8 +610,31 @@ p, span, button, a, small {
         z-index: 2;         
     }  
 }
+.about-info-container {
+    padding: 8rem 5rem; 
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+
+    .about-info {
+        position: relative;
+        z-index: 1; 
+        padding-right: 1rem;
+    }
+}
+.about-info-container-two {
+    padding: 0 5rem;
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+
+    .about-info {
+        position: relative;
+        z-index: 1; 
+        padding-left: 1rem;
+    }
+}
+
 .gallery-container {
-    padding: 8rem 0.1rem; 
+    padding: 8rem 0.1rem 0; 
 
     .gallery-header {
         text-align: center; 
