--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5, h6, label {
 p, span, button, a, small {
     font-family: 'Lato', sans-serif;
 }
+a {
+    text-decoration: none; 
+    color: $darkblue-color;
+}
 .container {
     display: flex; 
     justify-content: start; 
@@ -154,7 +158,7 @@ p, span, button, a, small {
     color: rgba(255,255,255,0.7);
 }
 .highlight-background {
-    background-color: $highlight-background; 
+    background-color: $lightbeige-background; 
     padding: 0 1rem;
 }
 .form-label {
@@ -442,6 +446,7 @@ p, span, button, a, small {
     background-color: rgba(209,210,227,0.4);
     position: relative;
     z-index: 5; 
+    padding-bottom: 10rem;
     transform: skewY(5deg);
 }
 .featured-work-title {
@@ -453,22 +458,19 @@ p, span, button, a, small {
 }
 .featured-work {
     @include grid-layout; 
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     padding: 0 5rem; 
-    grid-gap: 1.5rem; 
+    grid-gap: 2rem; 
     transform: skewY(-5deg);
+
+    .featured-video-info {
+        padding: 1rem 2rem;
+        align-self: flex-start;
+    }
 
     iframe {
         width: 100%; 
     }
-}
-
-
-
-.featured-work-button {
-    padding: 8rem 5rem 10rem 5rem; 
-    text-align:center; 
-    transform: skewY(-5deg);
 }
 /* contact page */ 
 .contact-header {
